--- a/main.tex
+++ b/main.tex
@@ -2,7 +2,9 @@
 
 \input{src/cover.tex}
 
-\clearpage\null\thispagestyle{empty}
+\clearpage
+ I declare that, as auther of the document, I'm responsible for its content, and for parts taken from other works credit is explicity given to others by citation or acknowledgement.
+\thispagestyle{empty}
 
 \maketitle
 
