--- a/src/10-history.tex
+++ b/src/10-history.tex
@@ -111,11 +111,11 @@ LogOp~\cite{logop}, Scope~\cite{merrick2000scoped}\\
 \label{fig:past-summary} 
 \end{figure}
 
-Many coordination models were based on the concept of a shared data space where the processes of a parallel computing system can write and read information, enabling so-called \textit{generative communication}. A number of approches to generative communication derives from Linda \cite{Linda}, called tuple-based coordination models. Linda is based on the idea of processes sharing information and synchronise by suspending writing and retrieving of tuples (chunks of heterogeneous knowledge) from a shared tuple-space. The data could be queried through tuple templates, i.e. partial representations of the structure and content matching. No information about the sender or the space itself is required in order for communication to happen, obtaining a decoupled communication. From this idea logical tuple-space models has been created, where the processes share first-order logic tuples and tuple spaces can be programmed as first-order logic theories. An exemple of such systems is Shared Prolog \cite{SharedProlog}, a framework for writing multi-processor Prolog systems. The innovative idea in those system was to equip the shared space with some form of application logic that can manipulate the data and the way that it can be accessed.
+Many coordination models were based on the concept of a shared data space where the processes of a parallel computing system can write and read information, enabling so-called \textit{generative communication}. A number of approches to generative communication derives from Linda \cite{Linda}, called tuple-based coordination models. Linda is based on the idea of processes sharing information and synchronise by suspending writing and retrieving of tuples (chunks of heterogeneous knowledge) from a shared tuple-space. The data could be queried through tuple templates, i.e. partial representations of the structure and content matching. No information about the sender or the space itself is required in order for communication to happen, obtaining a decoupled communication. From this idea logical tuple-space models have been created, where the processes share first-order logic tuples and tuple spaces can be programmed as first-order logic theories. An exemple of such systems is Shared Prolog \cite{SharedProlog}, a framework for writing multi-processor Prolog systems. The innovative idea in those system was to equip the shared space with some form of application logic that can manipulate the data and the way that it can be accessed.
 
-Those approaches didn't focus on distributed systems but only on coordination of centralised local components. As software components became spread across the system network, so multiple tuple spaces can be distributed across the system environment and systems can start dealing with location and mobility, enabling expression of dynamic environment topologies \cite{Survey}. Therefore has been created systems like JavaSpaces \cite{freeman1999javaspaces} and TSpaces \cite{TSpaces}, or systems dealing with the location of agents like Lime \cite{Lime} and Klaim \cite{Klaim}.
+Those approaches didn't focus on distributed systems but only on coordination of centralised local components. As software components became spread across the system network, so multiple tuple spaces can be distributed across the system environment and systems can start dealing with location and mobility, enabling expression of dynamic environment topologies \cite{Survey}. Therefore have been created systems like JavaSpaces \cite{freeman1999javaspaces} and TSpaces \cite{TSpaces}, or systems dealing with the location of agents like Lime \cite{Lime} and Klaim \cite{Klaim}.
 
-In order to deal with the problems of openness (environment changes, faults and interactions), large scate (huge number of agents) and intrinsic adaptiveness (ability to intercept events and react to them to guarantee system resilience) an approach of \textit{self-organizing coordination} is needed, where coordination abstractions handle "local" interactions only such that global and robust patterns of correct coordination behavior can emerge \cite{Survey}. For instance SwarmLinda \cite{SwarmLinda} is a tuple-based middleware that guarantees efficient retrieval of tuple by computational mechanisms inspired by the collective intelligence of swarms of ants.
+In order to deal with the problems of openness (environment changes, faults and interactions), large scale (huge number of agents) and intrinsic adaptiveness (ability to intercept events and react to them to guarantee system resilience) an approach of \textit{self-organizing coordination} is needed, where coordination abstractions handle "local" interactions only such that global and robust patterns of correct coordination behavior can emerge \cite{Survey}. For instance SwarmLinda \cite{SwarmLinda} is a tuple-based middleware that guarantees efficient retrieval of tuple by computational mechanisms inspired by the collective intelligence of swarms of ants.
 
 The \textit{Multi-Agent Systems (MAS)} focus on the macro level of systems of interacting autonomous agents, aiming to solve the challenge of making agents with conflicting goals cooperate. Frameworks and linguistic approaches, grouped under the notion of \textit{organisation-oriented programming}, emerged to model the organisational dimension of MAS. Another branch of research focusing on macro-level behavior is that of \textit{Collective Adaptive Systems (CAS)}, based on large dynamic numbers of devices (called \textit{emsembles}, \textit{collectives} or \textit{aggregates}), decentralisation of control, non-synchronised operations and abstraction of the interactions details.
 
