--- a/src/00-introduction.tex
+++ b/src/00-introduction.tex
@@ -1,7 +1,7 @@
 \section{Motivation}
-In the last years the number, pervasiveness and variety of interconnected devices has been constantly increasing. This network, commonly referred as the \textit{Internet of Things} (IOT), is compesed of numerous and different devices, like vehicular control systems, personal smart devices, drones and all types of sensors. This network of devices creates many opportunities to build application working on this large amount of data but creates also new challenges and difficulties in managing the network complexity and in computing the data in an efficient way. One solution to this problem is to move the computation from the \textit{cloud computing} to the \textit{edge computing}, a paradigm aiming to provide cloud computing functionalities to the edge of the network, so that the computation happens directly where the data are generated. Edge computing allows to make an efficient use of the resorces and provides a better support to real-time computation, where the latency must be reduced as much as possible. In order to develop this kind of system new software development methods are needed to deal with the deriving complexity.
+In the last years the number, pervasiveness and variety of interconnected devices has been constantly increasing. This network, commonly referred as the \textit{Internet of Things} (IOT), is composed of numerous and different devices, like vehicular control systems, personal smart devices, drones and all types of sensors. This network of devices creates many opportunities to build application working on this large amount of data but creates also new challenges and difficulties in managing the network complexity and in computing the data in an efficient way. One solution to this problem is to move the computation from the \textit{cloud computing} to the \textit{edge computing}, a paradigm aiming to provide cloud computing functionalities to the edge of the network, so that the computation happens directly where the data are generated. Edge computing allows to make an efficient use of the resources and provides a better support to real-time computation, where the latency must be reduced as much as possible. In order to develop this kind of system new software development methods are needed to deal with the deriving complexity.
 
-\textit{Aggregate programming} \cite{Aggregate01} is a paradigm aiming to address this problem, by treating the cooperating collection of devices as the basic unit of computation. Based on the \textit{field calculus} \cite{FieldCalculus}, it provides a layered framework for the development of distributed systems, based on the idea of programming a large system as a whole, i.e. expressing the behavior by a global program without the need of specifying the local behavior or managing comunication among the devices.
+\textit{Aggregate programming} \cite{Aggregate01} is a paradigm aiming to address this problem, by treating the cooperating collection of devices as the basic unit of computation. Based on the \textit{field calculus} \cite{FieldCalculus}, it provides a layered framework for the development of distributed systems, based on the idea of programming a large system as a whole, i.e. expressing the behavior by a global program without the need of specify the local behavior or manage communication among the devices.
 
 There are currently two main implementation of the aggregate programming framework, each with its own strength and weaknesses. \textit{Protelis} \cite{Protelis} is an implementation providing its API as a Domain Specific Language (DSL) for Java and running on the Java Virtual Machine (JVM). It provides full interoperability with the Java type-system and API. Protelis programs are written with an \textit{external} DSL, which means that the programs are written in its own language and translated in Java executable programs by a parser. Since the majority of programs require some degree of interaction with existing Java code this approach cause an increased complexity in the managment of the codebase for keeping synchronized the parts in the two languages. It also requires to Protelis developer to provide and maintain editing tools for the DSL. \textit{\Scafi{}} \cite{Scafi} is another aggregate programming implementation providing its API as a Scala \cite{Scala} \textit{internal} DSL, i.e. on top of the host programming language. Therefore \Scafi{} developers doesn't need to learn a new language and can reuse all the usual Scala tooling. Unlike Protelis, in order to provide a more seamless integration with Scala, the provided API have a different semantic from the field calculus. The \Scafi{} semantic has been proved to express a different set of programs from the field calculus, but with a non-empty intersection with it capable of expressing all the self-stabilizing programs.
 
@@ -9,4 +9,4 @@ There are currently two main implementation of the aggregate programming framewo
 The goal of the thesis is to provide an overview of the  existing aggregate programming frameworks and lay the foundation for a new framework called \textit{\Kotac{}}. \Kotac{} aims to provide a cross-platform Kotlin \cite{Kotlin} internal DSL matching the field calculus semantics. Like \Scafi{} offers the advantages of an internal DSL while keeping the same semantics of Protelis. The Kotlin programming language has been choose in order to also provide an easy integration with the Android platform \cite{Android}, which is currently the most used mobile platform, available also for many smart devices like televisions and cars.
 
 \section{Outline}
-This thesis is organized as follows. Chapter \ref{chap:history} provides an overview of the prior approaches to distributed computation and how they lead to the foundation of the field calculus. Chapter \ref{chap:aggregate} illustrates the field calculus and the aggregate programming framework. Chapters \ref{chap:protelis} and \ref{chap:scafi} provides the syntax and characteristics of the two main aggregate programming implementations: Protelis and \Scafi{}, while chapter \ref{chap:comparison} shows the differences between their semantics. Chapter \ref{chap:kotlin} provides an introduction to the Kotlin programming language an its main features. Chapter \ref{chap:kotac} shows the design decisions behind \Kotac{} and its partial implementation. Finally chapter \ref{chap:future} draws conclusions and delines the future development.
+This thesis is organized as follows. Chapter \ref{chap:history} provides an overview of the prior approaches to distributed computation and how they lead to the foundation of the field calculus. Chapter \ref{chap:aggregate} illustrates the field calculus and the aggregate programming framework. Chapters \ref{chap:protelis} and \ref{chap:scafi} provide the syntax and characteristics of the two main aggregate programming implementations: Protelis and \Scafi{}, while chapter \ref{chap:comparison} shows the differences between their semantics. Chapter \ref{chap:kotlin} provides an introduction to the Kotlin programming language and its main features. Chapter \ref{chap:kotac} shows the design decisions behind \Kotac{}, its partial implementation and its formalization \FKotac{}. Finally chapter \ref{chap:future} draws conclusions and delines the future development.
