--- a/src/20-aggregate-programming.tex
+++ b/src/20-aggregate-programming.tex
@@ -31,7 +31,7 @@ The field calculus is a tiny functional language based on a set of abstract oper
                 \FUNCTION & \BNFcce &  \defK \,\; \fname (\overline{\xname}) \; \{ \e \}
                 &{ \mbox{\footnotesize function declaration}}
                 \\[3pt]
-                \e & \BNFcce &  \xname \;\BNFmid\; \anyvalue \;\BNFmid\; \e(\overline\e) \;\BNFmid\; \fifK (\e) \{\e\} \elseK \{\e\} \;\BNFmid &{ \mbox{\footnotesize expression}} \\
+                \e & \BNFcce &  \xname \;\BNFmid\; \anyvalue \;\BNFmid\;  (\overline{\xname}) \toSym{\name} \e \; \BNFmid \; \e(\overline\e) \;\BNFmid\; \fifK (\e) \{\e\} \elseK \{\e\} \;\BNFmid &{ \mbox{\footnotesize expression}} \\
                 && \nbrK\{\e\} \;\BNFmid\; \repK(\e)\{ (\xname) \ftoSym \e \} \; \BNFmid \; \\
                 && \shareK(\e)\{(\xname) \ftoSym \e \}
                 \\[3pt]
@@ -62,10 +62,12 @@ A function declaration defines a function named $d$ with a sequence of variable 
 An expression can be:
 \begin{itemize}
 \item a variable $\xname$ referring a function parameter
-\item a function call $\e(\overline{\e})$, where $\e$ evaluates to a field of functions $\funvalue$, $\overline{\e}$ are the function arguments and evaluates to the function application
-\item a {branching expression} $\fifK (\e_0) \{\e_1\} \{\e_2\}$, also called  \textit{domain restriction expression}, its a lazy evaluated expression that divides the computation in two branches: the devices for which $\e_0$ evaluates to $\truevalue$ computes $\e_1$, the devices for which $\e_0$ evaluates to $\falsevalue$ coputes $\e_2$
+\item a value $\anyvalue$
+\item an anonumous function $(\overline{\xname}) \toSym{\name} \e$  where $\overline{\xname}$ are variable names for the formal parameter, $\e$ is the body of the function and $\name$ is a \texttt{tag} identifying the function. $\name$ doesn't appear in the source code but is uniquely determined by the function syntactical representation.
+\item a function call $\e(\overline{\e})$, where $\e$ evaluates to a function$\funvalue$, $\overline{\e}$ are the function arguments and evaluates to the function application
+\item a {branching expression} $\fifK (\e_0) \{\e_1\} \{\e_2\}$, also called  \textit{domain restriction expression}, its a lazy evaluated expression that divides the computation in two branches: the devices for which $\e_0$ evaluates to $\truevalue$ compute $\e_1$, the devices for which $\e_0$ evaluates to $\falsevalue$ compute $\e_2$
 \item an \textit{$\nbrK$-expression}, also called \textit{neightbouring field construction}, $\nbrK\{\e\}$ which evaluates to a field from neighbouring devices (including the execution device) to their most recent evaluation of the expression $\e$
-\item a \textit{$\repK$-expression}, also called \textit{time evolution expression}, $\repK(\e_0)\{ (\xname) \ftoSym \e \}$, which at each round evaluates to the application to the function of the result of the previous round, using the \textit{initialization expression} $\e_0$ in the first round
+\item a \textit{$\repK$-expression}, also called \textit{time evolution expression}, $\repK(\e_0)\{ (\xname) \ftoSym \e \}$, which at each round evaluates to the application of the result of the previous round to the function, using the \textit{initialization expression} $\e_0$ in the first round
 \item a \textit{$\shareK$-expression} $\shareK(\e_1)\{(\xname) \ftoSym \e_2 \}$, which each round evaluates to the application of the function with the argument $\xname$ taking the value of a field with the last computed values $\e_2$ by each neighbouring device, using $\e_1$ as the initial value for the executing device.
 \end{itemize}
 
@@ -73,7 +75,7 @@ A value can be either a \textit{neighbouring field} $\fvalue$ or a \textit{local
 
 Local values can be either \textit{data value} $\dcOf{\dc}{\overline\lvalue}$, in which $\dc$ its a data constructor and $\overline \lvalue$ are local value arguments, or a function value $\funvalue$.
 
-A \textit{function value} $\funvalue$ can be a built-in function $\bname$, a declared function $\fname$ or an anonymous function value $(\overline{\xname}) \toSym{\name} \e$  where $\overline{\xname}$ are variable names for the formal parameter, $\e$ is the body of the function and $\name$ is a \texttt{tag} identifying the function. $\name$ doesn't appear in the source code but is uniquely determined by the function syntactical representation.
+A \textit{function value} $\funvalue$ can be a built-in function $\bname$, a declared function $\fname$ or a closed anonymous function value $(\overline{\xname}) \toSym{\name} \e$.
 
 \section{Field Calculus Typing}
 
@@ -187,11 +189,11 @@ A \textit{function value} $\funvalue$ can be a built-in function $\bname$, a dec
 	\label{fig:hfctyping}
 \end{figure}
 
-Figure \ref{fig:hfctyping} shows the typing rules for the field calculus from \cite{FieldCalculus}. A type $\type$ can be either a local type or a field type. Local types $\ltype$ are either built-in types $\builtintype$ (e.g. numbers, booleans, lists) or function types $ (\overline{\type}) \rightarrow \type $. A field type $\ftype$ is a type in the form $\ftypeOf{\ltype}$ where $\ltype$ is the type of the values in the field. The typing judgement rules are given in the form $\expTypJud{\OtypEnv}{\MtypEnv}{\e}{\type}$, meaning that $\e$ has type $\type$ under the type-set assumptions $\OtypEnv$ and the type assumptions $\MtypEnv$. $\MtypEnv$ is a type environment collecting type assumptions for program variables in the form $\xname:\type$. $\OtypEnv$ is a local-type-set environment associating function types to each data constructor, built-in function and user defined function. $\OtypEnv_0$ denotes the distinguished built-in local-type-set environement for built-in functions and data constructors.
+Figure \ref{fig:hfctyping} shows the typing rules for the field calculus from \cite{FieldCalculus}. A type $\type$ can be either a local type or a field type. Local types $\ltype$ are either built-in types $\builtintype$ (e.g. numbers, booleans, lists) or function types $ (\overline{\type}) \rightarrow \type $. A field type $\ftype$ is a type in the form $\ftypeOf{\ltype}$ where $\ltype$ is the type of the values in the field. The typing judgement rules are given in the form $\expTypJud{\OtypEnv}{\MtypEnv}{\e}{\type}$, meaning that $\e$ has type $\type$ under the type-set assumptions $\OtypEnv$ and the type assumptions $\MtypEnv$. $\MtypEnv$ is a type environment collecting type assumptions for program variables in the form $\xname:\type$. $\OtypEnv$ is a local-type-set environment associating a set of function types to each data constructor, built-in function and user defined function. $\OtypEnv_0$ denotes the distinguished built-in local-type-set environement for built-in functions and data constructors.
 
-Rule \ruleNameSize{[M-VAR]} types a variable $\xname$ by looking the type assumptions in $\MtypEnv$. Rule \ruleNameSize{[M-DAT]} express how to type a data value $\dcOf{\dc}{\overline{\lvalue}}$, extracting its data constructor type from $\OtypEnv_0$. Rule \ruleNameSize{[M-FLD]} assigns type $\ftypeOf{\ltype}$ to a field $\fvalue$ if each $\lvalue$ in the field has type $\ltype$. Rule \ruleNameSize{[M-N-FUN]} assigns a type from $\OtypEnv$ to built-in or user defined functions $\ofname$. Rule \ruleNameSize{[M-A-FUN]} assigns a type to an anonumous function by typing the body given the types of the arguments. Rule \ruleNameSize{[M-APP]} assigns a type to a function application by assigning a type to the function expression and the arguments. Rule \ruleNameSize{[M-REP]} assings a type to a $\mathtt{rep}$-expressing, ensuring that the initial value and the body have the same type. Rule \ruleNameSize{[M-NBR]} assings a type to a $\mathtt{nbr}$-expression as a field of the type of the expression $\e$, while ensuring that it has a local type in order to avoid fields of fields. Rule \ruleNameSize{[M-SHARE]} assigns a type to a $\mathtt{share}$-expression, ensuring that the initial value and the body have the same type. Rule \ruleNameSize{[M-IF]} assings a type to an $\mathtt{if}$-expression, verifying that both branches has the same type and that the condition evaluates to a boolean. This rule is actually not necessary since every $\mathtt{if}$ expression can be rewritten by using the built-in operator $\mathtt{mux}(\e,\e_1,\e_2)$ which eagerly evaluates both $\e_1$ and $\e_2$ and returns the result of one of them according to the truth value computed by $\e$. Every $\fifK(\e)\{\e_1\}\{\e_2\}$ can be rewritten then as $\mathtt{mux}(\e,()\ftoSym\e_1,()\ftoSym\e_2)()$.
+Rule \ruleNameSize{[M-VAR]} types a variable $\xname$ by looking the type assumptions in $\MtypEnv$. Rule \ruleNameSize{[M-DAT]} express how to type a data value $\dcOf{\dc}{\overline{\lvalue}}$, extracting its data constructor type from $\OtypEnv_0$. Rule \ruleNameSize{[M-FLD]} assigns type $\ftypeOf{\ltype}$ to a field $\fvalue$ if each $\lvalue$ in the field has type $\ltype$. Rule \ruleNameSize{[M-N-FUN]} assigns a type from $\OtypEnv$ to built-in or user defined functions $\ofname$. Rule \ruleNameSize{[M-A-FUN]} assigns a type to an anonumous function by typing the body given the types of the arguments. Rule \ruleNameSize{[M-APP]} assigns a type to a function application by assigning a type to the function expression and the arguments. Rule \ruleNameSize{[M-REP]} assings a type to a $\mathtt{rep}$-expression, ensuring that the initial value and the body have the same type. Rule \ruleNameSize{[M-NBR]} assings a type to a $\mathtt{nbr}$-expression as a field of the type of the expression $\e$, while ensuring that it has a local type in order to avoid fields of fields. Rule \ruleNameSize{[M-SHARE]} assigns a type to a $\mathtt{share}$-expression, ensuring that the initial value and the body have the same type. Rule \ruleNameSize{[M-IF]} assings a type to an $\mathtt{if}$-expression, verifying that both branches has the same type and that the condition evaluates to a boolean. This rule is actually not necessary since every $\mathtt{if}$ expression can be rewritten by using the built-in operator $\mathtt{mux}(\e,\e_1,\e_2)$ which eagerly evaluates both $\e_1$ and $\e_2$ and returns the result of one of them according to the truth value computed by $\e$. Every $\fifK(\e)\{\e_1\}\{\e_2\}$ can be rewritten then as $\mathtt{mux}(\e,()\ftoSym\e_1,()\ftoSym\e_2)()$.
 
-Rule \ruleNameSize{[M-FUNCTION]} allows assignment of a user-defined function to a non-empty set of types. Rule \ruleNameSize{[M-PROGRAM]} allows to type a program with the type of the main expression by adding to the local-type-set environment all the types of the user defined functions.
+Rule \ruleNameSize{[M-FUNCTION]} allows assignment of a user-defined function to a non-empty set of types. Rule \ruleNameSize{[M-PROGRAM]} allows to type a program with the type of the main expression by adding to the local-type-set environment all the type sets of the user defined functions.
 
 
 \section{Field Calculus Semantic}
@@ -377,7 +379,7 @@ Rule \ruleNameSize{[M-FUNCTION]} allows assignment of a user-defined function to
  \caption{Big-step operational semantics adapted from \cite{FieldCalculus}.} \label{fig:deviceSemantics}
 \end{figure}
 
-The operational semantics of the syntax is shown in figure \ref{fig:deviceSemantics}. The derive judgements are in the form $\bsopsem{\deviceId}{\Trees}{\senstate}{\e}{\vtree}$ which means that the expression $\e$ evaluates to the value-tree $\vtree$ with respect to the value-tree environment $\Trees$, the device $\deviceId$ and the sensor state $\senstate$. A \textit{value-environment} $\Trees$ is map from device identifies $\deviceId$ to value-trees. A \textit{value-tree} $\vtree$ is an ordered tree of values tracking the results of all the computed subexpressions. The evaluation rules are expressed recursively by evaluating the subexpressions with respect to a new value environment obtained by the subtrees (when present) of the current value-tree environment $\Trees$, this process is called \textit{alignment}. $\senstate$ is a data structure containing information about the device sensors that will be used by the built-in functions.
+The operational semantics of the syntax is shown in figure \ref{fig:deviceSemantics}. The derive judgements are in the form $\bsopsem{\deviceId}{\Trees}{\senstate}{\e}{\vtree}$ which means that the expression $\e$ evaluates to the value-tree $\vtree$ with respect to the value-tree environment $\Trees$, the device $\deviceId$ and the sensor state $\senstate$. A \textit{value-environment} $\Trees$ is map from device identifiers $\deviceId$ to value-trees. A \textit{value-tree} $\vtree$ is an ordered tree of values tracking the results of all the computed subexpressions. The evaluation rules are expressed recursively by evaluating the subexpressions with respect to a new value environment obtained by the subtrees (when present) of the current value-tree environment $\Trees$, this process is called \textit{alignment}. $\senstate$ is a data structure containing information about the device sensors that will be used by the built-in functions.
 
 The auxiliary function $\vroot$ extract the root value of a value-tree, while $\pi$ extracts a subtree from a value-tree. The functions \textit{name}, \textit{args} and \textit{body} extract respectively the name, formal parameters and body of a function.
 
@@ -475,7 +477,7 @@ From the field calculus the aggregate programming framework is built as a series
 
 The resilient coordination layer defines in particular the following three operators:
 \begin{itemize}
-\item \textit{Block} $\mathtt{G(source, initial, metric, accumulate)}$, a spreading operator for distance measurement and broadcast of values. It computes the shortest-path from a $\mathtt{source}$ (field with value $\truevalue$ for sources) accourting to a $\mathtt{metric}$ (function mapping neightbours to distance) and propagate values up the gradient starting with the value of $\mathtt{initial}$ and accumulating with the binary function $\mathtt{accumulate}$
+\item \textit{Block} $\mathtt{G(source, initial, metric, accumulate)}$, a spreading operator for distance measurement and broadcast of values. It computes the shortest-path from a $\mathtt{source}$ (field with value $\truevalue$ for sources) according to a $\mathtt{metric}$ (function mapping neightbours to distance) and propagate values up the gradient starting with the value of $\mathtt{initial}$ and accumulating with the binary function $\mathtt{accumulate}$
 \item \textit{Block} $\mathtt{C(potential, local, null, accumulate)}$, an operator that accumulates values with the binary function $\mathtt{accumulate}$ down to the $\mathtt{source}$ following the $\mathtt{potential}$ field. $\mathtt{null}$ provides the idempotent value for the accumulation function, $\mathtt{local}$ is accumulated with any values from neighbours at higher potential
 \item \textit{Block} $\mathtt{T(initial, zero, decay)}$, a flexible countdown operator starting from $\mathtt{initial}$ to $\mathtt{zero}$ decreasing by the $\mathtt{decay}$ function.
 \end{itemize}
