--- a/src/30-protelis.tex
+++ b/src/30-protelis.tex
@@ -44,9 +44,9 @@ Finally an expression can be:
 \begin{itemize}
 \item a value $\mathtt{w}$
 \item a function call with the arguments $\overline{\e}$, the function can be either a built-in function $\mathtt{b}$\footnote{some built-in function can be called with an infix-style but the syntax has been omitted for simplicity}, a user defined function $\mathtt{f}$ or the application of the argument to a lambda or function name resulting from the evaluation of $\e$
-\item a Java method call with the arguments $\overline{\e}$, it can be called either a method $\mathtt{m}$ on an object computed by $\e$ or a static method via an alias $\#\mathtt{a}$. The aliases are created automatically from the imports.
+\item a Java method call with the arguments $\overline{\e}$, it can be calling either a method $\mathtt{m}$ on an object computed by $\e$ or a static method via an alias $\#\mathtt{a}$. The aliases are created automatically from the imports.
 \item a $\mathtt{rep}$-construct $\repK(\xname\texttt{<-}\mathtt{w})\{ \overline{\mathtt{s}};\}$, equivalent to the field calculus $\mathtt{rep}$, declaring a variable $\xname$ inizialized at $\mathtt{w}$ and updated each round with the result of the execution of the body $\overline{\mathtt{s}}$
-\item an $\mathtt{if}$-construct $\mathtt{if}(\e)\{\overline{\mathtt{s}};\}\mathtt{else}\{\overline{\mathtt{s}}';\}$, equivalent to the field calculus $\mathtt{if}$, execution only $\overline{\mathtt{s}}$ or $\overline{\mathtt{s}}'$ according to the branching condition computed by $\e$
+\item an $\mathtt{if}$-construct $\mathtt{if}(\e)\{\overline{\mathtt{s}};\}\mathtt{else}\{\overline{\mathtt{s}}';\}$, equivalent to the field calculus $\mathtt{if}$, executing only $\overline{\mathtt{s}}$ or $\overline{\mathtt{s}}'$ according to the branching condition computed by $\e$
 \item a $\mathtt{mux}$-construct $\mathtt{mux}(\e)\{\overline{\mathtt{s}};\}\mathtt{else}\{\overline{\mathtt{s}}';\}$, computing both branches $\overline{\mathtt{s}}$ and $\overline{\mathtt{s}}'$ and return the value of one of them accourding to the branching condition computed by $\e$
 \item a $\mathtt{nbr}$-construct $\nbrK\{\overline{\mathtt{s}}';\}$, equivalent to the field calculus $\mathtt{nbr}$, returning a field from all neighbors to their last value from computing $\overline{\mathtt{s}}$.
 \end{itemize}
